packages/core/src/components/list/list.scss
@import "@poppy/poppy.globals";

// List
// ----------------------------------------------------------------

pop-list {
  contain: content;
  flex-wrap: wrap;
  width: 100%;

  margin: 0;
  padding: 0.5rem;
}

// List Orientation
// ----------------------------------------------------------------

pop-list[orientation="vertical"],
pop-list:not([orientation]) {
  display: flex;
  flex-direction: column;
}
pop-list[orientation="horizontal"] {
  display: inline-flex;
}

// List size
// ----------------------------------------------------------------

pop-list[size="xs"] {
  border-radius: get-radius(sm);
  font-size: 0.75rem;
  line-height: 1rem;
}
pop-list[size="sm"] {
  border-radius: get-radius(md);
  font-size: 0.875rem;
  line-height: 1.25rem;
}
pop-list[size="md"],
pop-list:not([size]) {
  border-radius: get-radius(md);
  font-size: 0.875rem;
  line-height: 1.25rem;
}
pop-list[size="lg"] {
  border-radius: get-radius(md);
  font-size: 1.125rem;
  line-height: 1.75rem;
}

// List Title & Item Size
// ----------------------------------------------------------------

pop-list[size="xs"] > :is(pop-list-title, pop-item) {
  border-radius: get-radius(sm);
  font-size: 0.75rem;
  line-height: 1rem;
}
pop-list[size="sm"] > :is(pop-list-title, pop-item) {
  border-radius: get-radius(md);
  font-size: 0.875rem;
  line-height: 1.25rem;
}
pop-list {
  &[size="md"],
  &:not([size]) {
    > :is(pop-list-title, pop-item) {
      border-radius: get-radius(md);
      font-size: 0.875rem;
      line-height: 1.25rem;
    }
  }
}
pop-list[size="lg"] > :is(pop-list-title, pop-item) {
  border-radius: get-radius(md);
  font-size: 1.125rem;
  line-height: 1.75rem;
}

// List - Sub List
// ----------------------------------------------------------------

pop-list.in-item {
  position: relative;
  margin-inline-start: 1rem;
  padding: 0;
  padding-inline-start: 0.5rem;
  white-space: nowrap;

  &::before {
    position: absolute;
    top: 0.75rem;
    bottom: 0.75rem;

    width: 1px;
    inset-inline-start: 2px;
    content: "";

    --tw-bg-opacity: 1;
    background-color: get-color("base.content");
    opacity: 0.1;
  }
}

